[tool.poetry]
name = "toolbox-py"
version = "0.1.0"
description = "FastAPI Boilerplate"
authors = ["Jiyong Jung <padocon@naver.com>"]

[tool.poetry.dependencies]
python = "3.11.9"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
celery = "^5.4.0"
gunicorn = "^22.0.0"
fastapi-event = "^0.1.3"
pythondi = "^1.2.4"
ujson = "^5.10.0"
aiomysql = "^0.2.0"
click = "^8.1.7"
redis = "^5.0.4"
pydantic-settings = "^2.2.1"
pyjwt = "^2.8.0"
pytest-asyncio = "^0.23.6"
cryptography = "^42.0.7"
coverage = "^7.5.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
pymysql = "^1.1.0"
dependency-injector = "^4.41.0"
httpx = "^0.27.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
types-redis = "^4.6.0.20240106"

[tool.coverage.run]
omit=["tests/*", "test_*.py", "migrations/*"]

[tool.isort]
profile="black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
